--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
     "require": {
         "php": "^8.1",
         "spatie/laravel-package-tools": "^1.14.0",
-        "illuminate/contracts": "^5.5|^6.0|^7.0|^8.0|^9.0|^10.0",
-        "illuminate/support": "^5.5|^6.0|^7.0|^8.0|^9.0|^10.0"
+        "illuminate/contracts": "^5.5|^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
